[workspace]
resolver = "2"
members = [ "hyw", "hyw-base", "hyw-embed" ]

[workspace.package]
edition = "2024"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/hyw"
license = "MIT"
authors = ["PRO-2684"]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.
