[workspace]
resolver = "2"
members = ["hyw", "hyw-base", "hyw-embed"]

[workspace.package]
keywords = ["search", "semantic", "embedding"]
categories = ["command-line-utilities"]
edition = "2024"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/hyw"
license = "MIT"
authors = ["PRO-2684"]

[workspace.dependencies]
compio = { version = "0.17.0", features = ["macros"] }
cyper = { version = "0.7.1", features = ["json", "multipart"] }
futures-util = "0.3.31"
instant-distance = { version = "0.6.1", features = ["with-serde"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.
