[package]
name = "hyw-base"
version = "0.1.0"
readme = "README.md"
description = "Data and basic structures for hyw"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
