[package]
name = "hyw-base"
readme = "README.md"
description = "Data and basic structures for hyw"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
