[package]
name = "hyw-embed"
version = "0.1.0"
readme = "README.md"
description = "Creating embeddings for hyw"
keywords = []
categories = []
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cyper.workspace = true
base64 = "0.22.1"
compio.workspace = true
serde.workspace = true

[[bin]]
name = "hyw-embed"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
