[package]
name = "hyw-embed"
version = "0.1.0"
readme = "README.md"
description = "Creating embeddings for hyw"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22.1"
cyper.workspace = true
compio.workspace = true
hyw-base = { path = "../hyw-base", version = "0.1.0" }
instant-distance.workspace = true
itermore = { version = "0.8.0", features = ["array_chunks"] }
postcard = { workspace = true, optional = true }
serde.workspace = true
serde-big-array = "0.5.1"
thiserror.workspace = true
http = "1.4.0"

[[bin]]
name = "hyw-embed"
required-features = ["cli"]

[features]
cli = ["postcard"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
