[package]
name = "hyw"
readme = "../README.md"
description = "Querying embeddings for hyw"
version.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
compio.workspace = true
hyw-base = { path = "../hyw-base", version = "0.1" }
hyw-embed = { path = "../hyw-embed", version = "0.1" }
instant-distance.workspace = true
postcard = { workspace = true, optional = true }

[[bin]]
name = "hyw"
required-features = ["cli"]

[features]
cli = ["postcard"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
